--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,4 +7,5 @@
     <p>Daily Challenges made for 21 days </p>
 </div>
 
-<a href=""> Dia 1 </a>
+<a href="About"> Day 1 </a>
+<a href="HelloWorld"> Day 2 </a>
