--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,8 @@
     <title>@ViewData["Title"] - _21_days_of_code</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/_21_days_of_code.styles.css" asp-append-version="true" />
+    @* <link rel="stylesheet" href="~/_21_days_of_code.styles.css" asp-append-version="true" /> *@
+    <link rel="stylesheet" href="21_days_of_code.styles.css">
 </head>
 <body>
     <header>
