Added Title to pages

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,11 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home - ";
 }
 
 <div class="text-center">
-    <h1 class="display-4">21 Days Of Code</h1>
-    <p>Daily Challenges made for 21 days </p>
+    <h1 class="display-4">21 Days of Code</h1>
+    <h3>Daily Challenges made for 21 days </h2>
 </div>
 
-<a href="About"> Day 1 </a>
-<a href="HelloWorld"> Day 2 </a>
+<h4>Select a day: </h4>
+<div id="links">
+    <a href="About"> Day 1 </a>
+    <a href="HelloWorld"> Day 2 </a>
+    <a href="AnimatedButton"> Day 3 </a>
+</div>
