--- a/Views/HelloWorld/Index.cshtml
+++ b/Views/HelloWorld/Index.cshtml
@@ -1,3 +1,8 @@
+@{
+    ViewData["Title"] = "Day 2 - Hello World - ";
+}
+
+
 
 <div id="HelloWorld">
     <img src="images/smilling_woman.png" alt="Smilling Woman with a Laptop"><a href='https://br.freepik.com/fotos-vetores-gratis/mulher-atraente'></a></img>
