Adding style to day 1 page

--- a/Views/About/Index.cshtml
+++ b/Views/About/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>
     About
 </h1>
-<p>In the Day 1, we have to create a repository on Github, which you check it out by <a href="https://github.com/renanmms/21_Days_Of_Code">Clicking Here</a></p>
+<p>In the Day 1, we have to create a repository on Github, which you check it out by <a href="https://github.com/renanmms/21_Days_Of_Code">clicking here</a></p>
 
-<a href="">#21diasdecodigo</a>
-<a href="">#soumarmiteiro</a>
+<a href="" class="hashtags">#21diasdecodigo</a>
+<a href="" class="hashtags">#soumarmiteiro</a>
