--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,4 +12,5 @@
     <a href="About"> Day 1 </a>
     <a href="HelloWorld"> Day 2 </a>
     <a href="AnimatedButton"> Day 3 </a>
+    <a href="Calculator"> Day 4 </a>
 </div>
