Inserted profile image in day 6

--- a/Views/Glassmorphism/Index.cshtml
+++ b/Views/Glassmorphism/Index.cshtml
@@ -3,7 +3,16 @@
     ViewData["Title"] = "Day 6 - Glassmorphism";
 }
 
-
-<img src="~/images/taking_notes.png" width="1500vh" height="650vh">
-    <div></div>
+<img src="~/images/taking_notes.png" width="100%" height="100%">
+    <div class="window">
+        <img id="profile" src="~/images/linkedin_profile_pic.jpeg" width="120px" height="150px" alt="LinkedIn Profile Pic">
+        <button class="text-center">Siga-me</button>
+    </div>
 </img>
+
+<style>
+    @* img {
+        width: 50%;
+        height: 50%;
+    } *@
+</style>
